-bug: fixed multiple output support in script server
-bug: fixed incompatible binary snmp calling parameter issue with net-snmp versions earlier than 5.1
-bug: fixed issues encounted when polling invalid data sources
-bug: fixed issue where if a host was deleted, reindexing would continue to attempt to be performed on it
-bug: lib/ping.php could not be used as an include in script_server scripts
-feature: allow |query_*| to be used within a CDEF

0.8.6f
-security: Hardened PHP Project Advisory #042005 - Cacti Authentification/Addslashes Bypass Vulnerability
-security: Hardened PHP Project Advisory #022005 - Cacti Multiple SQL Injection Vulnerabilities
-security: Hardened PHP Project Advisory #032005 - Cacti Remote Command Execution Vulnerability

0.8.6e
-bug#0000143: Allow the user to enter 'U' for unknown minimum and maximum data source input values.
-bug#0000377: Fix logarithmic graph creation issues.
-bug#0000392: Implement caching to reduce the number of SQL queries needed to render the graph tree.
-bug#0000402/#0000457: Allow bounds to be set properly for logarithmic graph creation.
-bug#0000428: Unable to try login again after Access Denied.
-bug#0000450: Force strict checking for data query parsing to prevent numeric values from being incorrectly handled.
-bug#0000453: SPAN tag between each character of GraphTitle in Graph Management.
-bug#0000458: Generate and error message and exit poller.php if the cactid binary path is invalid.
-bug#0000463: Fix Syslog logging of poller statistics.
-bug#0000464: Remove dates from Syslog generated messages.
-bug#0000465: Allow for the mass resize of graphs.
-bug#0000471: Remove the graph 'Settings' tab if the user is not allowed to save graph settings.
-bug#0000478: Validate field input values on the Data Templates page. Prevent duplicate data template items from appearing as a result of this bug.
-bug#0000481: Add several checks to prevent PHP errors when parsing data query XML files.